--- a/app/app.css
+++ b/app/app.css
@@ -34,7 +34,11 @@
 
 @layer components {
   .button-primary {
-    @apply transition-colors bg-primary hover:bg-primary-600 rounded text-white w-full text-sm font-semibold h-10;
+    @apply block text-center content-center transition-colors bg-primary hover:bg-primary-600 rounded text-white w-full text-sm font-semibold h-10;
+  }
+
+  .button-outline {
+    @apply block text-center content-center transition-colors border border-primary text-primary hover:bg-neutral-100 rounded w-full text-sm font-semibold h-10;
   }
 }
 
@@ -50,7 +54,7 @@ label {
 }
 
 label > input {
-  @apply block mt-1;
+  @apply block mt-1 w-full;
 }
 
 input {
