--- a/app/app.css
+++ b/app/app.css
@@ -3,60 +3,76 @@
 @source "../node_modules/dn-react-router-toolkit/";
 
 @theme {
-  --font-sans:
-    "SUIT Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-sans:
+        "SUIT Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-  --color-primary: #2176ff;
-  --color-primary-50: #e5efff;
-  --color-primary-100: #bed7ff;
-  --color-primary-200: #97bfff;
-  --color-primary-300: #6fa6ff;
-  --color-primary-400: #488eff;
-  --color-primary-500: #2176ff;
-  --color-primary-600: #005ff9;
-  --color-primary-700: #0050d2;
-  --color-primary-800: #0041aa;
-  --color-primary-900: #003283;
-  --color-primary-950: #00235c;
+    --color-primary: #2176ff;
+    --color-primary-50: #e5efff;
+    --color-primary-100: #bed7ff;
+    --color-primary-200: #97bfff;
+    --color-primary-300: #6fa6ff;
+    --color-primary-400: #488eff;
+    --color-primary-500: #2176ff;
+    --color-primary-600: #005ff9;
+    --color-primary-700: #0050d2;
+    --color-primary-800: #0041aa;
+    --color-primary-900: #003283;
+    --color-primary-950: #00235c;
 }
 
-@layer bae {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-neutral-200);
-  }
+@layer base {
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-neutral-200);
+    }
 }
 
 @layer components {
-  .button-primary {
-    @apply block text-center content-center transition-colors bg-primary hover:bg-primary-600 rounded text-white w-full text-sm font-semibold h-10;
-  }
+    .button-primary {
+        @apply whitespace-nowrap px-6 block text-[15px] text-center content-center transition-colors bg-primary hover:bg-primary-500 rounded-lg text-white font-semibold h-11;
+    }
 
-  .button-outline {
-    @apply block text-center content-center transition-colors border border-primary text-primary hover:bg-neutral-100 rounded w-full text-sm font-semibold h-10;
-  }
+    .button-outline {
+        @apply whitespace-nowrap px-6 block text-[15px] text-center content-center transition-colors border border-primary text-primary hover:bg-neutral-100 rounded-lg font-semibold h-11;
+    }
+
+    .button-dangerous {
+        @apply whitespace-nowrap px-6 block text-[15px] text-center content-center transition-colors bg-red-600 hover:bg-red-700 rounded-lg text-white font-semibold h-11;
+    }
+
+    .button-icon {
+        @apply whitespace-nowrap text-[24px] w-10 h-10 flex justify-center items-center hover:bg-neutral-100 transition-colors rounded-full outline-none;
+    }
+
+    .input-form {
+        @apply w-full outline-none border border-neutral-200 rounded-lg py-2.5 px-3 font-normal focus:border-transparent transition-all focus:ring-2 focus:ring-primary placeholder:text-neutral-400;
+    }
+
+    .text-editor {
+        @apply w-full outline-none border border-neutral-200 rounded-lg py-2.5 px-3 font-normal focus:border-transparent transition-all focus:ring-2 focus:ring-primary placeholder:text-neutral-400;
+    }
 }
 
 button,
 input[type="button"],
 input[type="submit"],
 select {
-  @apply cursor-pointer;
+    @apply cursor-pointer;
 }
 
 label {
-  @apply font-semibold;
+    @apply font-semibold;
 }
 
 label > input {
-  @apply block mt-1 w-full;
+    @apply block mt-3 w-full;
 }
 
-input {
-  @apply outline-none border border-neutral-300 rounded mb-2 h-10 px-2 font-normal;
+label + label {
+    @apply mt-8;
 }
